--- a/Src/index.html
+++ b/Src/index.html
@@ -3,6 +3,9 @@
 		<div class="jumbotron">
 			<h1 class="title hidden"></h1>
 			<p class="description"></p>
+			<div class="synopsis hidden">
+				<p></p>
+			</div>
 			<a class="btn btn-primary btn-lg" role="button">Generate</a>
 		</div>
 	</body>
