--- a/Src/index.html
+++ b/Src/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<div class="jumbotron">
-			<h1 class="title hidden"></h1>
+			<h1 class="title"></h1>
 			<p class="description"></p>
 			<div class="synopsis hidden">
 				<p></p>
