--- a/Src/index.html
+++ b/Src/index.html
@@ -3,10 +3,11 @@
 		<div class="jumbotron">
 			<h1 class="title"></h1>
 			<p class="description"></p>
+			<a id="synopsis" class="btn btn-primary btn-med">Click to see full synopsis</a>
 			<div class="synopsis hidden">
 				<p></p>
 			</div>
-			<a class="btn btn-primary btn-lg" role="button">Generate</a>
+			<a class="btn btn-primary btn-lg" id="generate" role="button">Generate</a>
 		</div>
 	</body>
 	<link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
