--- a/Story-Generator.html
+++ b/Story-Generator.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
 		<div class="jumbotron">
+			<div class="loading"></div>
 			<h1 class="title"></h1>
 			<p class="description"></p>
 			<a id="synopsis" class="btn btn-primary btn-med">Click to see full synopsis</a>
@@ -10,9 +11,9 @@
 			<a class="btn btn-primary btn-lg" id="generate" role="button">Generate</a>
 		</div>
 	</body>
-	<link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+	<link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
 	<link href="style.css" rel="stylesheet"/>
-	<script src="../bower_components/jquery/dist/jquery.js"></script>
+	<script src="/bower_components/jquery/dist/jquery.js"></script>
 	<script src="story_generator.js"></script>
-	<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </html>
